--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Mockup</title>
 </head>
 <body>
@@ -26,28 +27,39 @@
         <figure>
             <img src="images/programadorassssss.png" alt="woman-developer">
         </figure>
-        <h2> Somos <strong> ADA ITW </strong> </h2>
-        <p> 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Et repellat incidunt ex perferendis pariatur assumenda 
-            sit itaque sapiente ab tempora, eum commodi ullam aperiam 
-            ut iure consectetur in molestiae cumque?
-        </p> 
+        <div class="column-content">
+            <h2> Somos <b> ADA ITW </b> </h2>
+            <p> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Et repellat incidunt ex perferendis pariatur assumenda 
+                sit itaque sapiente ab tempora, eum commodi ullam aperiam 
+                ut iure consectetur in molestiae cumque?
+            </p>
+        </div> 
     </section>
 
     <section class="section" id="nuestros-programas">
-        <h3> Nuestros programas </h3>
+        <h1> Nuestros programas </h1>
         <div class="course-offer">
-            <div class="course">
+            <div class="card-course card1">
                 <h4> Programador Front-end </h4>
+                <p> 
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi sit rem rerum adipisci deserunt ea temporibus sed architecto necessitatibus quasi!
+                </p>
                 <button> + info </button>
             </div>
-            <div class="course">
+            <div class="card-course card2">
                 <h4> Programador Full-stack </h4>
+                <p> 
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam nostrum assumenda earum quibusdam doloribus nesciunt ad sunt vitae consequatur! Eius?
+                </p> 
                 <button> + info </button>
             </div>
-            <div class="course">
+            <div class="card-course card3">
                 <h4> Programador Python </h4>
+                <p> 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cumque voluptatum id fuga officiis natus corporis accusantium fugit adipisci ad!
+                </p>
                 <button> + info </button>
             </div>
         </div>
@@ -66,10 +78,8 @@
     </section>
 
     <section class="section are-you-ready">
-        <div class="ready">
             <h1> Lista para programar? </h1>
             <button> APLICÁ YA! </button>
-        </div>
     </section>
 
     <footer>
